# price-tracker

./: .env  .env.compose.example  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  poc_gemma4_extractor.py  project.config.yaml  pyproject.toml
.claude/: CLAUDE.md  session-state.yaml  settings.local.json
.claude/agents/: backend.md  frontend.md  orchestrator.md  product_strategist.md  qa.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_bgn_to_eur.py  0003_brochures.py  0004_llm_fields_prices.py  0005_top_category_prices.py  0006_brand_aliases.py  0007_store_brochure_url.py  0008_grocery_categories.py  0009_backfill_product_category_id.py  0010_backfill_product_brand.py  0011_prices_unit_currency_fix.py  0012_product_pack_info.py  0013_product_additional_info.py  0014_store_listing_url.py  0015_scrape_run_task_id_cancelled.py  0016_pack_type_generic_pack.py  0017_add_generic_pack_to_prices.py  (+2 more)
app/: config.py  database.py  main.py
frontend/: .env.example  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.ts
reports/: 2026-04-04-session2.md  2026-04-04-session3.md  2026-04-04.md  2026-04-06.md  2026-04-09.md  2026-04-10-session9.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-15.md  2026-04-20.md  README.md
scripts/: seed_demo.py
tests/: conftest.py  test_admin.py  test_catalogue.py  test_comparison.py  test_health.py  test_history.py  test_pipeline.py  test_price_apis.py
(+100 files in other folders)
